--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
 		"copy-webpack-plugin": "^4.5.2",
 		"css-loader": "^1.0.0",
 		"extract-text-webpack-plugin": "^4.0.0-beta.0",
+		"html-webpack-plugin": "^3.2.0",
 		"node-sass": "^4.9.3",
 		"sass-loader": "^7.1.0",
 		"style-loader": "^0.23.0",
+		"ts-loader": "^5.0.0",
 		"typescript": "^3.0.3",
 		"webpack": "^4.17.2",
-		"webpack-cli": "^3.1.0"
+		"webpack-cli": "^3.1.0",
+		"webpack-dev-server": "^3.1.7"
 	},
 	"scripts": {
-		"dev": "webpack --mode development",
+		"serve": "webpack-dev-server --devtool eval --progress --colors --open --hot",
+		"dev": "webpack --mode development -w",
 		"build": "webpack --mode production"
 	}
 }
