Added EJS, Handlebars and other modules + Created functionality to get Frontmatter and Markdown content and generate HTML files + Added usage of HTML webpack plugin to compile templates.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,9 @@
     "include": [
         "./src/**/*"
     ],
+    "files": [
+        "typings.d.ts"
+    ],
     "exclude": [
         "node_modules", // don't run on any code in the node_modules directory
         "**/*.spec.ts"
