--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
 	"devDependencies": {
 		"copy-webpack-plugin": "^4.5.2",
 		"css-loader": "^1.0.0",
+		"ejs": "^2.6.1",
 		"extract-text-webpack-plugin": "^4.0.0-beta.0",
+		"front-matter": "^2.3.0",
+		"handlebars": "^4.0.12",
+		"handlebars-loader": "^1.7.0",
 		"html-webpack-plugin": "^3.2.0",
 		"node-sass": "^4.9.3",
 		"sass-loader": "^7.1.0",
 		"style-loader": "^0.23.0",
 		"ts-loader": "^5.0.0",
 		"typescript": "^3.0.3",
+		"uglifyjs-webpack-plugin": "^1.3.0",
 		"webpack": "^4.17.2",
 		"webpack-cli": "^3.1.0",
 		"webpack-dev-server": "^3.1.7"
