--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
 	"description": "Web Development Blog",
 	"license": "MIT",
 	"dependencies": {
+		"bootstrap": "^4.1.3",
+		"jquery": "^3.3.1",
+		"popper.js": "^1.14.4",
 		"showdown": "^1.8.6"
 	},
 	"devDependencies": {
@@ -27,7 +30,7 @@
 	},
 	"scripts": {
 		"serve": "webpack-dev-server --devtool eval --progress --colors --open --hot",
-		"dev": "webpack --mode development -w",
+		"dev": "webpack --mode development",
 		"build": "webpack --mode production"
 	}
 }
