--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 	"scripts": {
 		"serve": "webpack-dev-server --devtool eval --progress --colors --open --hot",
 		"dev": "webpack --mode development",
+		"dev:w": "webpack --mode development -w",
 		"build": "webpack --mode production"
 	}
 }
