--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"sass-loader": "^7.1.0",
 		"style-loader": "^0.23.0",
 		"ts-loader": "^5.0.0",
+		"turndown": "^5.0.1",
 		"typescript": "^3.0.3",
 		"uglifyjs-webpack-plugin": "^1.3.0",
 		"webpack": "^4.17.2",
